objects/LLC_BI__Application__c.object
<CustomObject>
    <fields>
        <fullName>nSBA__Export_Exp_If_Authorized_to_Conduct_Bus__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If proceeds are being used to finance specific export transactions (including indirect exports), lender has determined that U.S. companies are authorized to conduct business with the proposed country(ies) to which the goods or services will be shipped and has reviewed the Ex-Im Bank Country Limitation Schedule (CLS) to verify that the U.S. Government has not restricted trade with any foreign country that the applicant does business with (i.e., no country is identified on the CLS by Note #7).</description>
        <inlineHelpText>Export Express If Financing Specific Transactions Lender Determined Applicant Is Authorized To Conduct Business</inlineHelpText>
        <label>If Authorized to Conduct Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Export_Exp_If_Fin_Indirect_Cert_Provided__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If proceeds are being used to finance indirect exports, the applicant has provided certification to lender from the applicant’s domestic customer (typically in the form of a letter, invoice, order or contract) that the goods or services are in fact being exported.</description>
        <inlineHelpText>Export Express If Financing Indirect Certification Provided</inlineHelpText>
        <label>Export Exp If Fin Indirect Cert Provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Export_Exp_Loan_Will_Not_Refi_SBA_Loan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Loan is an Export Express loan and will not refinance an existing SBA-guaranteed loan.</description>
        <inlineHelpText>Export Express Loan Will Not Refinance SBA Loan</inlineHelpText>
        <label>Export Exp Loan Will Not Refi SBA Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Export_Exp_New_Mkt_Or_Expand_Exist_Mkt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Applicant has demonstrated to lender that loan proceeds will enable it to enter a new export market or expand an existing export market.</description>
        <inlineHelpText>Export Express New Market Or Expanding Existing Market</inlineHelpText>
        <label>Export Exp New Mkt Or Expand Exist Mkt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Export_Exp_No_Fin_Overseas_Ops_Except__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Proceeds will not be used to finance overseas operations, except for the marketing and/or distribution of products/services exported from the U.S.</description>
        <inlineHelpText>Export Express No Financing Overseas Operations Except Marketing And Distribution</inlineHelpText>
        <label>Export Exp No Fin Overseas Ops Except</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Extraordinary_Servicing_Fee_Amount__c</fullName>
        <description>Users populate this optional field with the estimated amount of the extraordinary servicing fee for the duration of the loan. Lender may charge an extraordinary servicing fee for the outstanding balance on the part requiring special servicing.</description>
        <inlineHelpText>Users populate this optional field with the estimated amount of the extraordinary servicing fee for the duration of the loan. Lender may charge an extraordinary servicing fee for the outstanding balance on the part requiring special servicing.</inlineHelpText>
        <label>Extraordinary Servicing Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Extraordinary_Servicing_Fee_Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to certify or Do not certify that The Extraordinary Servicing fee is reasonable and prudent.</description>
        <inlineHelpText>Indicator to certify or Do not certify that The Extraordinary Servicing fee is reasonable and prudent.</inlineHelpText>
        <label>Extraordinary Servicing Fee Certified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Extraordinary_Servicing_Fee_Percent__c</fullName>
        <description>An extraordinary servicing fee may be charged for the outstanding balance on the part requiring special servicing. Users populate this optional field with the extraordinary servicing fee yearly percentage. SBA guaranty does not extend to extraordinary servicing fees and, at time of guarantee purchase, SBA will not pay any portion of such fees.</description>
        <inlineHelpText>An extraordinary servicing fee may be charged for the outstanding balance on the part requiring special servicing. Users populate this optional field with the extraordinary servicing fee yearly percentage.</inlineHelpText>
        <label>Extraordinary Servicing Fee Percent</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>nSBA__First_Rate_Adjustment_Date_Phase_2__c</fullName>
        <description>First Rate Adjustment Date - Phase 2</description>
        <inlineHelpText>If you have complex interest rate for the loan dna the second interest rate is variable, please enter first rate adjustment date for the second interest rate.</inlineHelpText>
        <label>First Rate Adjustment Date - Phase 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nSBA__First_Rate_Adjustment_Date__c</fullName>
        <description>First Rate Adjustment Date - Phase 1</description>
        <inlineHelpText>If interest rate is variable, please enter first rate adjustment date. If you have complex interest rate for the loan, please enter first rate adjustment date for the first interest rate.</inlineHelpText>
        <label>First Rate Adjustment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nSBA__Fixed_Asset_Limitation_Amount__c</fullName>
        <description>Fixed Asset Limitation Amount per year that Lender requires Borrower and Operating Company to certify that they will not, without Lender’s prior written consent purchase or lease agreement any fixed assets above it.</description>
        <inlineHelpText>Fixed Asset Limitation Amount per year that Lender requires Borrower and Operating Company to certify that they will not, without Lender’s prior written consent purchase or lease agreement any fixed assets above it.</inlineHelpText>
        <label>Fixed Asset Limitation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_1050_Borrower_Signature_Date__c</fullName>
        <description>Date when Form 1050 was executed by Borrower</description>
        <inlineHelpText>Date when Form 1050 was executed by Borrower</inlineHelpText>
        <label>Form 1050 Borrower Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_1050_Lender_Signature_Date__c</fullName>
        <description>Date when Form 1050 was executed by Lender</description>
        <inlineHelpText>Date when Form 1050 was executed by Lender</inlineHelpText>
        <label>Form 1050 Lender Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_159_Agent_Business_City__c</fullName>
        <description>City of business address of Agent providing services to the Applicant</description>
        <label>Agent Business City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_159_Agent_Business_State_2__c</fullName>
        <description>Business address (state) of Agent providing services to the Applicant</description>
        <label>Agent Business State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nSBA__Form_159_Agent_Business_State__c</fullName>
        <description>--Depricated--Business address (state) of Agent providing services to the Applicant. Replaced by Form_159_Agent_Business_State_2__c</description>
        <label>-D Agent Business State</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_159_Agent_Business_Street__c</fullName>
        <description>Business address (street) of Agent providing services to the Applicant</description>
        <label>Agent Business Street</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_159_Agent_Business_Zipcode__c</fullName>
        <description>Business address of Agent providing services to the Applicant</description>
        <label>Agent Business Zipcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_159_Agent_Contact_Person__c</fullName>
        <description>Contact person for agent performing services.</description>
        <inlineHelpText>Contact person for agent performing services.</inlineHelpText>
        <label>Agent Contact Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_159_Agent_Providing_Services_Email__c</fullName>
        <description>Lender Service Provider Contact Information - Email</description>
        <inlineHelpText>Lender Service Provider Contact Information - Email</inlineHelpText>
        <label>Agent Providing Services Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_159_Agent_Providing_Services_Fax__c</fullName>
        <description>Lender Service Provider Contact Information - Fax</description>
        <inlineHelpText>Lender Service Provider Contact Information - Fax</inlineHelpText>
        <label>Agent Providing Services Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_159_Agent_Providing_Services_Phone__c</fullName>
        <description>Lender Service Provider Contact Information - Phone</description>
        <inlineHelpText>Lender Service Provider Contact Information - Phone</inlineHelpText>
        <label>Agent Providing Services Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_159_Agent_Representative_Title__c</fullName>
        <description>Title of agent representative who is signing SBA Form 159 for Agent.</description>
        <inlineHelpText>Title of agent representative who is signing SBA Form 159 for applicant.</inlineHelpText>
        <label>Agent Representative Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_159_Agent_Signature_Date__c</fullName>
        <description>Date of Signature of SBA Form 159 by Agent providing services to the Applicant</description>
        <label>Agent Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_159_Agent_Type__c</fullName>
        <description>Type of Agent performing loan services that were documented on SBA Form 159.</description>
        <inlineHelpText>Type of Agent performing loan services that were documented on SBA Form 159.</inlineHelpText>
        <label>Type of Agent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SBA Lender</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Third Party Lender</fullName>
                </value>
                <value>
                    <fullName>Independent Loan Packager</fullName>
                </value>
                <value>
                    <fullName>Accountant preparing financial statements</fullName>
                </value>
                <value>
                    <fullName>Referral Agent or Broker</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nSBA__Form_159_Applicant_Representative_Title__c</fullName>
        <description>Title of applicant representative who is signing SBA Form 159 for applicant.</description>
        <inlineHelpText>Title of applicant representative who is signing SBA Form 159 for applicant.</inlineHelpText>
        <label>Applicant Representative Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_159_Applicant_Signature_Date__c</fullName>
        <description>Date of Signature of SBA Form 159 by Applicant</description>
        <label>Applicant Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_159_Business_Name_of_Agent__c</fullName>
        <description>Business name of Agent providing services to the Applicant</description>
        <label>Business Name of Agent</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_159_Business_Name_of_Referral_Agent__c</fullName>
        <description>Business name of Referral Agent</description>
        <label>Business Name of Referral Agent</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_159_Is_Fee_Itemization_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Fee Itemization Attached to SBA Form 159</description>
        <inlineHelpText>Indicates if fee itemization report is sent along with SBA Form 159.</inlineHelpText>
        <label>Is Fee Itemization Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_159_Is_Fee_Paid_By_Applicant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the fee documented on SBA Form 159 is paid by Applicant. If false, the fee is paid by Lender.</description>
        <inlineHelpText>Indicates if the fee documented on SBA Form 159 is paid by Applicant. If false, the fee is paid by Lender.</inlineHelpText>
        <label>Is Fee Paid by Applicant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_159_Lender_Representative_Signing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Loan officer who is signing SBA Form 159.</description>
        <inlineHelpText>Loan officer who is signing SBA Form 159.</inlineHelpText>
        <label>Lender Representative Signing Form 159</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Form159LenderOfficerSigning</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_159_Lender_Signature_Date__c</fullName>
        <description>Date of Signature of SBA Form 159 by Lender</description>
        <label>Lender Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_159_Name_Of_Agent_Providing_Service__c</fullName>
        <description>Name of the person responsible for signing the document on Agent&apos;s behalf</description>
        <label>Name Of Agent Providing Service</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_159_Name_Of_Lender_Person_Signing__c</fullName>
        <description>Name of authorized lender representative responsible for signing SBA Form 159 document on Lender&apos;s behalf</description>
        <label>Name Of Lender Person Signing</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_159_Person_Signing_For_Applicant__c</fullName>
        <description>Person who is signing SBA Form 159 on behalf of Applicant</description>
        <label>Person Signing For Applicant</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_159_Person_Signing_For_Referral_Agt__c</fullName>
        <description>Name of the person responsible for signing the document on Referral Agent&apos;s behalf</description>
        <label>Person Signing For Referral Agent</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_159_Referral_Agent_Business_City__c</fullName>
        <description>Business address (City) of Referral Agent including zip code</description>
        <label>Referral Agent Business City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_159_Referral_Agent_Business_State__c</fullName>
        <description>Business address (State) of Referral Agent including zip code</description>
        <label>Referral Agent Business State</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_159_Referral_Agent_Business_Street__c</fullName>
        <description>Business address (street) of Referral Agent including zip code.</description>
        <label>Referral Agent Business Street</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_159_Referral_Agent_Business_Zipcode__c</fullName>
        <description>Business address (zipcode) of Referral Agent including zip code</description>
        <label>Referral Agent Business Zipcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_159_Service_Type__c</fullName>
        <description>Type of Service documented on SBA Form 159.</description>
        <inlineHelpText>Type of Service documented on SBA Form 159.</inlineHelpText>
        <label>Type of Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Loan packaging</fullName>
                </value>
                <value>
                    <fullName>Financial statement preparation</fullName>
                </value>
                <value>
                    <fullName>Broker or Referral services</fullName>
                </value>
                <value>
                    <fullName>Consultant services</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nSBA__Form_1846_Lender_Official_Signature_Date__c</fullName>
        <description>Date of Lender Official singing Form 1920</description>
        <label>Form 1846 Lender Official Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_1846_Lender_Official_Signing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>(ONLY FOR PLP SUBMISSIONS) Name and title of Approving/Certifying Lender Official signing Form 1846</description>
        <inlineHelpText>(ONLY FOR PLP SUBMISSIONS) Name and title of Approving/Certifying Lender Official signing Form 1846</inlineHelpText>
        <label>Form 1846 Lender Official Signing</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Application4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_1846_Lender_Official__c</fullName>
        <description>--DEPRECATED--Name and title of Lender Official signing Form 1846</description>
        <label>-D Form 1846 Lender Official</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_1920_Approve_Lender_Offic_Sign_Date__c</fullName>
        <description>(ONLY FOR PLP SUBMISSIONS) Date of Approving/Certifying Lender Official signing Form 1920</description>
        <label>Form 1920 Approve Lender Offic Sign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_1920_Lender_Official_Approving__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>(ONLY FOR PLP SUBMISSIONS) Name and title of Approving/Certifying Lender Official signing Form 1920</description>
        <inlineHelpText>(ONLY FOR PLP SUBMISSIONS) Name and title of Approving/Certifying Lender Official signing Form 1920</inlineHelpText>
        <label>Form 1920 Lender Official Approving</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Application2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_1920_Lender_Official_Signature_Date__c</fullName>
        <description>Date of Lender Official signing Form 1920</description>
        <label>Form 1920 Lender Official Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_1920_Lender_Official_Signing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>(ONLY FOR PLP SUBMISSIONS) Name and title of Approving/Certifying Lender Official signing Form 1920</description>
        <inlineHelpText>(ONLY FOR PLP SUBMISSIONS) Name and title of Approving/Certifying Lender Official signing Form 1920</inlineHelpText>
        <label>Form 1920 Lender Official Signing</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Application3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_601_Execution_Date__c</fullName>
        <description>Date of execution of the Form 601</description>
        <label>Form 601 Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nSBA__Form_652_Execution_Date__c</fullName>
        <description>Date of execution of the Form 652</description>
        <label>Form 652 Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nSBA__Franchise_Agreement_Termination_Notice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to give Lender 30 days notice of intent to terminate the Franchise Agreement. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Check to give Lender 30 days notice of intent to terminate the Franchise Agreement. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Franchise Agreement Termination Notice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Franchise_Eligible_For_SBA_Assistance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Lender has determined that all of Applicant brands are eligible for SBA financial assistance.</description>
        <inlineHelpText>Lender has determined that all of Applicant brands are eligible for SBA financial assistance.</inlineHelpText>
        <label>Franchise Eligible For SBA Assistance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Franchise_Fees_Payment_Deferred_In_Mnths__c</fullName>
        <description>Enter how many months upon Loan payment default or deferment, to defer payment of franchise fees, royalties, advertising, and other fees until Borrower brings Loan payments current. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Enter how many months upon Loan payment default or deferment, to defer payment of franchise fees, royalties, advertising, and other fees until Borrower brings Loan payments current. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Franchise Fees Payment Deferred In Mnths</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nSBA__Full_Marine_Insurance_Vessel_List__c</fullName>
        <description>List all vessel(s) that must be covered by Full Marine Insurance in the amount of the full insurable value with lender designated as mortgagee. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>List all vessel(s) that must be covered by Full Marine Insurance in the amount of the full insurable value with lender designated as mortgagee. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Full Marine Insurance Vessel List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Funding_Fee_Amount__c</fullName>
        <description>This value is calculated by taking the CDC Funding Fee(loan amount)</description>
        <formula>nSBA__Funding_Fee_Percentage__c * nSBA__Original_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This value is calculated by taking the CDC Funding Fee(loan amount)</inlineHelpText>
        <label>Funding Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nSBA__Funding_Fee_Percentage__c</fullName>
        <defaultValue>0.00025</defaultValue>
        <description>CDC funding fee percentage.</description>
        <inlineHelpText>CDC funding fee percentage.</inlineHelpText>
        <label>Funding Fee Percentage</label>
        <precision>9</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nSBA__If_Building_Has_Rent_Space_SBA_Compliant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If building will contain rental space, Applicant (or Operating Companies) will continue to occupy at least 60% of the rentable property for the term of the loan; lease long term no more than 20% of the rentable property to one or more tenants; plans to occupy within three years some of the remaining rentable property not immediately occupied or leased long term; and plans to occupy within ten years all of the rentable property not leased long term.</description>
        <inlineHelpText>If Building Will Contain Rental Space Is Occupied by SBA Regulations</inlineHelpText>
        <label>If Building Has Rent Space SBA Compliant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Information_Is_True_And_Correct__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Lender certifies that the loan information pertaining to the above loan is true and correct, to the best of its knowledge, and that it has exercised due diligence to obtain true and correct information. Lender is aware and acknowledges that SBA will not review eligibility prior to issuing a loan number and that if an SBA loan number is assigned and SBA later learns that the loan is not eligible, SBA may deny liability on its guaranty. Lender approves the loan application to SBA subject to the terms and conditions stated in the application and associated documents. Without the participation of SBA to the extent applied for Lender would not be willing to make this loan, and in its opinion the financial assistance approved is not otherwise available on reasonable terms. Lender certifies that none of the Lender&apos;s Associates, including but not limited to its employees, officers, directors, or substantial stockholders (more than 10%), has a financial interest in the Applicant.</description>
        <inlineHelpText>Community Adjustment and Investment Program (CAIP) loan eligible to be processed under the PLP lender&apos;s delegated authority? Answer only for CAIP loans.</inlineHelpText>
        <label>Information Is True And Correct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Initial_Disbursement_No_Later_Than__c</fullName>
        <description>Maximum number of months from the approval date of Authorization for making initial disbursement. Fill in only for DFP loans. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Maximum number of months from the approval date of Authorization for making initial disbursement. Fill in only for DFP loans. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Initial Disbursement No Later Than</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nSBA__Initial_Disbursement_No_Later_Then__c</fullName>
        <description>----DEPRECATED---- Maximum number of months from the approval date of Authorization for making initial disbursement. Fill in only for DFP loans. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Maximum number of months from the approval date of Authorization for making initial disbursement. Fill in only for DFP loans. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>-D Initial Disbursement No Later Then</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nSBA__Injection_Indication__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this loan application requires an injection of funds</description>
        <inlineHelpText>Indicates whether this loan application requires an injection of funds</inlineHelpText>
        <label>Injection Indication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Insurance_Requirements_Open_Options__c</fullName>
        <description>List all Insurance Requirements Open Options here. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>List all Insurance Requirements Open Options here. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Insurance Requirements Open Options</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nSBA__Intangible_Assets_Above_500000_And_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The purchase price of the business includes intangible assets (including, but not limited to, goodwill, client/customer lists, patents, copyrights, trademarks and agreements not to compete) in excess of $500,000 and the borrower and/or seller are contributing at least 25% equity.</description>
        <inlineHelpText>Intangible Assets Above 500000 And Borrower And Seller Contributing 25 Percent</inlineHelpText>
        <label>Intangible Assets Above 500000 And Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Intangible_Assets_Not_Above_500000__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The purchase price of the business does not include intangible assets (including, but not limited to, goodwill, client/customer lists, patents, copyrights, trademarks and agreements not to compete) in excess of $500,000.</description>
        <label>Intangible Assets Not Above 500000</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Interest_Only_Months_Frequency__c</fullName>
        <description>Holds the number of Units between two interest only payments. This field is used in SBA Loan Authorization only.</description>
        <inlineHelpText>Holds the number of Units between two interest only payments. This field is used in SBA Loan Authorization only.</inlineHelpText>
        <label>Interest Only Months Frequency</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>